    suggesting the improvement.  (Closes: #776853)
  * Dh_Lib.pm: Re-organise exports.
  * Dh_Lib.pm: Retract "print_and_complex_doit"; the only potential
    consumer went with a different code snippet.
  * dh_installinitramfs: New tool to install initramfs hook scripts and
    handle related maintscripts.  Thanks to Evgeni Golov for the
    suggestion.  (Closes: #491027)

  [ Dmitry Shachnev ]
  * qmake.pm: Use ${DEB_HOST_GNU_TYPE}-qmake wrapper for
    cross-compilation.  (Closes: #895286)

  [ Helmut Grohne ]
  * cmake: Pass CC/CXX environment variables down during native
    compilation as well. (Closes: #897083)

  [ Chris Lamb ]
  * dh_listpackages.1: Document that packages are listed in the
    order that they appear in debian/control.
    (Closes: #897949)

  [ Peter Pentchev ]
  * Dh_Lib: Permit leading and trailing whitespace around the
    debhelper-compat dependency when it is the first or the last
    relation listed.  (Closes: #897937)

  [ Jakub Wilk ]
  * dh_usrlocal: Fix invalid POD markup.

 -- Niels Thykier <niels@thykier.net>  Sun, 08 Apr 2018 09:40:32 +0000

debhelper (11.2.1) unstable; urgency=medium

  * Buildsystem.pm: Correctly pass build directory values to
    target buildsystems.  Thanks to Helmut Grohne, Adrian Bunk
    and Tobias Frost for the reports and debugging.
    (Closes: #895174, #895181)
  * Buildsystems: Avoid choosing a build system for the clean
    step if it is not necessary.  Previously, debhelper could
    choose a "random" build system that would prefer building
    in a separate build directory on the basis that the build
    directory should be removed.  With this, change we only
    choose such a build system if there is a build directory
    to remove.

 -- Niels Thykier <niels@thykier.net>  Sun, 08 Apr 2018 08:47:35 +0000

debhelper (11.2) unstable; urgency=medium

  [ Niels Thykier ]
  * debhelper.7: Add a ~ to the suggested Build-Depends to ensure