@@ -416,7 +416,9 @@ qw{
 	dh_installppp
 	dh_installudev
 	dh_installgsettings
-	dh_installinitramfs
+},
+   (!compat(11) ? qw(dh_installinitramfs) : qw()),
+qw{
 	dh_bugfiles
 	dh_ucf
 	dh_lintian
