@@ -56,6 +56,8 @@ debhelper (11.3) UNRELEASED; urgency=medium
   * dh_installinitramfs: New tool to install initramfs hook scripts and
     handle related maintscripts.  Thanks to Evgeni Golov for the
     suggestion.  (Closes: #491027)
+  * installinitramfs.pm: New sequence to enable dh_installinitramfs in
+    compat 11 and earlier.
 
   [ Dmitry Shachnev ]
   * qmake.pm: Use ${DEB_HOST_GNU_TYPE}-qmake wrapper for
